@@ -17,6 +17,7 @@ import ua.chernonog.working.antifraud.entity.UserEntity;
 //import ua.chernonog.working.antifraud.mapper.UserEntityToUserDetails;
 import ua.chernonog.working.antifraud.mapper.UserEntityToUserRes;
 import ua.chernonog.working.antifraud.mapper.UserReqToUserEntity;
+import ua.chernonog.working.antifraud.model.emuns.Operation;
 import ua.chernonog.working.antifraud.model.emuns.Role;
 import ua.chernonog.working.antifraud.model.request.UserReq;
 import ua.chernonog.working.antifraud.model.respons.UserRes;
@@ -45,7 +46,6 @@ public class UserService {
     public UserRes saveUser(UserReq user) {
         UserRes userRes;
         UserEntity userEntity;
-
         String hashPassword = passwordEncoder.encode(user.getPassword());
         if (userRepository.count() == 0) {
             userEntity = UserEntity.builder()
@@ -53,8 +53,8 @@ public class UserService {
                     .username(user.getUsername())
                     .password(hashPassword)
                     .role(Role.ADMINISTRATOR)
+                    .status("User " + user.getName() + " unlocked")
                     .build();
-
         } else if (userRepository.existsByNameIgnoreCase(user.getName())) {
             throw new ErrorResponseException(HttpStatus.CONFLICT);
         } else {
@@ -64,8 +64,7 @@ public class UserService {
                     .username(user.getUsername())
                     .password(hashPassword)
                     .role(Role.MERCHANT)
-                    .status("User " + user.getName() +" locked")
-//                    "User JohnDoe1 unlocked!
+                    .status("User " + user.getName() + " locked")
                     .build();
         }
         userRepository.save(userEntity);
@@ -77,8 +76,7 @@ public class UserService {
     public List<UserRes> getUsers() {
         return userRepository.findAll()
                 .stream().map(c -> userEntityToUserRes.toUserRes(c))
-                .collect(Collectors.toList());
-
+                .toList();
     }
 
     @Transactional
@@ -91,11 +89,8 @@ public class UserService {
     }
 
     public UserRes changeRole(String username, Role role) {
-        UserRes foundUser = userRepository
-                .findByUsernameIgnoreCase(username)
-                .map(c -> userEntityToUserRes.toUserRes(c))
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
-        if (role == Role.ADMINISTRATOR) {
+        UserRes foundUser = getUserRes(username);
+        if (foundUser.getRole() == Role.ADMINISTRATOR) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST);
         } else if (role == foundUser.getRole()) {
             throw new ResponseStatusException(HttpStatus.CONFLICT);
@@ -104,7 +99,28 @@ public class UserService {
             userRepository.updateRoleByUsername(role, username);
         }
         return foundUser;
+    }
 
+    private UserRes getUserRes(String username) {
+        return userRepository
+                .findByUsernameIgnoreCase(username)
+                .map(c -> userEntityToUserRes.toUserRes(c))
+                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+    }
+
+    public UserRes changeStatus(String username, Operation operation) {
+        UserRes foundUser = getUserRes(username);
+        if (foundUser.getRole() == Role.ADMINISTRATOR) {
+            throw new ResponseStatusException(HttpStatus.CONFLICT);
+        }
+        if (operation == Operation.UNLOCK) {
+            foundUser.setStatus("User " + foundUser.getName() + " unlocked!");
+        } else if (operation == Operation.LOCK) {
+            foundUser.setStatus("User " + foundUser.getName() + " locked!");
+        }
+        userRepository.updateStatusByUsername(foundUser.getStatus(), foundUser.getUsername());
+
+        return foundUser;
 
     }
 }
